<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.charl.contactos.Main2Activity"
    android:orientation="vertical"
    android:background="#000000">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:gravity="center"
        android:text="@string/nuevo_contacto"
        android:textColor="#FFFFFF"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="#7B1FA2"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/nombre2"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="22sp"
            android:hint="@string/nombre_del_contacto"
            android:textColorHint="#FFFF"
            android:textColor="#FFFFFF"
            android:maxLength="17"
            android:inputType="text"
            android:id="@+id/one" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/apellido1"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="22sp"
            android:hint="@string/apellido_del_contacto"
            android:textColorHint="#FFFF"
            android:textColor="#FFFFFF"
            android:maxLength="17"
            android:inputType="text"
            android:id="@+id/two"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/telefonos2"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="22sp"
            android:hint="@string/telefonos"
            android:textColorHint="#FFFF"
            android:textColor="#FFFFFF"
            android:maxLength="17"
            android:inputType="phone"
            android:id="@+id/three"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/id"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="22sp"
            android:hint="@string/id_del_contacto"
            android:textColorHint="#FFFF"
            android:textColor="#FFFFFF"
            android:maxLength="12"
            android:inputType="number"
            android:id="@+id/four"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/correo"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="22sp"
            android:hint="@string/correo_del_contacto"
            android:textColorHint="#FFFF"
            android:textColor="#FFFFFF"
            android:maxLength="24"
            android:inputType="textEmailAddress"
            android:id="@+id/five"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/direccion"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="22sp"
            android:hint="@string/direccion_del_contacto"
            android:textColorHint="#FFFF"
            android:textColor="#FFFFFF"
            android:maxLength="25"
            android:inputType="text"
            android:id="@+id/six"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/cumplea_os"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="22sp"
            android:hint="@string/cumpleanos"
            android:textColorHint="#FFFF"
            android:textColor="#FFFFFF"
            android:id="@+id/cal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/elegir_imagen"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:textSize="22sp" />


        <ImageView
            android:id="@+id/img"
            android:gravity="bottom|end"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/add"
            android:enabled="false"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_contacto"
        android:layout_gravity="center"
        android:id="@+id/Button"/>

</LinearLayout>
